--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,26 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>Bootstrap 4 Starter Pack</title>
+        <title>WE FIX Clonas</title>
     </head>
 
-    <body>
-        <h1>Bootstrap 4.0.0-beta Starter</h1>
+    <body id="home">
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="" class="navbar-brand">WE FIX CL</a>   
+
+            <div class="collapse navbar-collapse" id="">
+                <div class="navbar-nav">
+                    <a href="#home" class="nav-item nav-link active">HOME</a>
+                    <a href="#" class="nav-item nav-link">HOW IT WORKS</a>
+                    <a href="#" class="nav-item nav-link">FAQs</a>
+                    <a href="#" class="nav-item nav-link">ABOUT</a>
+                    <a href="#" class="nav-item nav-link">CONTACT</a>
+                </div>
+            </div>
+
+
+        </nav>
 
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
